fix: fix lockscreen having weird flicker when closing

--- a/src/boot/lock-screen/LockScreen.css
+++ b/src/boot/lock-screen/LockScreen.css
@@ -280,7 +280,7 @@
         right: 0;
         bottom: 0;
         left: 0;
-        overflow: auto;
+        overflow: hidden;
 
         /* Smooth scroll to the input because we will be focusing it on mount */
         scroll-behavior: smooth;
@@ -294,7 +294,7 @@
     width: 100%;
     height: 100%;
     z-index: 9999999999;
-    overflow-x: auto;
+    overflow-x: hidden;
     overflow-y: scroll;
     display: none;
 
